--- a/engine shifter/engine shifter.vcxproj.filters
+++ b/engine shifter/engine shifter.vcxproj.filters
@@ -660,6 +660,9 @@
     <ClInclude Include="extlibs\include\SFML\Window\WindowStyle.hpp">
       <Filter>Libraries</Filter>
     </ClInclude>
+    <ClInclude Include="engine_shifter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="manual.txt">
